# unhaunter

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  bevy_migration.txt  index.html
.cursor/rules/: uk-spelling.mdc
.github/workflows/: ci.yml  test.yml
pathfinding-visualizer/: README.md
scripts/: build.sh  lint.sh  setup.sh  test.sh
tests/: simple_integration_tests.rs
uncampaign/: Cargo.toml
uncore/: Cargo.toml
uncore/benches/: core_benchmarks.rs
uncore/src/: colours.rs  difficulty.rs  difficulty_tests.rs  lib.rs  noise.rs  random_seed.rs  scoring_tests.rs
uncore/src/assets/: tmxmap.rs
uncore/src/behavior/: mod.rs
uncore/src/behaviour/: component.rs  mod.rs
uncore/src/behaviour/behaviour/: mod.rs
uncore/src/components/: ghost_behaviour_dynamics.rs  ghost_influence.rs  ghost_sprite.rs  mod.rs  truck_ui.rs  truck_ui_button.rs
uncore/src/components/board/: boardposition.rs  direction.rs  mapcolour.rs  mod.rs  position.rs  position_tests.rs
uncore/src/events/: ambient_sound_mute.rs  mod.rs  roomchanged.rs
uncore/src/resources/: ambient_mute.rs  board_data.rs  mod.rs  player_input.rs  roomdb.rs
uncore/src/systemparam/: collision_handler.rs
uncore/src/systems/: ambient_sound_mute.rs  animation.rs  board.rs  mod.rs
uncore/src/types/: evidence.rs  evidence_status.rs  gear_kind.rs  grade.rs  mission_data.rs  quadcc.rs
uncore/src/types/board/: fielddata.rs  light.rs  prebaked_lighting_data.rs
uncore/src/types/ghost/: definitions.rs  types.rs
uncore/src/types/tiledmap/: map.rs
unghost/: Cargo.toml
(+203 files in other folders)
