[package]
name = "uncore"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bevy = { workspace = true }
bevy-persistent = { workspace = true }
bevy_platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
enum-iterator = { workspace = true }
thiserror = { workspace = true }
fastapprox = { workspace = true }
rand = { workspace = true }
tiled = { workspace = true }
anyhow = { workspace = true }
ordered-float = { workspace = true }
itertools = { workspace = true }
ndarray = { workspace = true }
noise = { workspace = true }

unsettings = { path = "../unsettings" }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
proptest = { workspace = true }
mockall = { workspace = true }
criterion = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
